--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,6 +10,10 @@ body {
   min-height: 100vh;
 }
 
+.MuiTextField-root {
+  background: #fefbf6;
+}
+
 .container {
   margin: 2% 5%;
   min-height: 100vh;
