refactor company screen and add modal for company addition

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  background-color: #dbe2ef;
-  /* margin: 0 auto; */
+  background-color: #f3f9fb;
   min-height: 100vh;
   max-height: 90vh;
   min-height: 90vh;
