--- a/src/screens/Login.css
+++ b/src/screens/Login.css
@@ -1,3 +1,15 @@
-.loginScreen {
-  margin: 10% 25%;
+.loginForm {
+  text-align: center;
+  border-radius: 2%;
+  border-color: #dddddd;
+  border-style: solid;
+  border-width: 1px;
+  background-color: #fefbf6;
+  padding: 3%;
+  margin: 5% 35%;
+}
+
+.loginFormControl {
+  display: flex;
+  justify-content: center;
 }
