add checks for zero value denominator in calcs.  Update FCF calcs.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,8 +7,8 @@
 body {
   background-color: #f3f9fb;
   min-height: 100vh;
-  max-height: 90vh;
-  min-height: 90vh;
+  /* max-height: 90vh;
+  min-height: 90vh; */
 }
 
 .MuiTextField-root {
