--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -7,6 +7,55 @@ nav {
   display: none;
 }
 
+.sublinks {
+  display: none;
+  position: absolute;
+  background-color: rgba(243, 249, 251, 0.5);
+  min-width: 100px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.5);
+  border-radius: 2%;
+  padding: 1% 0;
+  z-index: 1;
+}
+
+.sublinks a {
+  color: #112d4e;
+  padding: 5px 6px;
+  text-decoration: none;
+  display: block;
+}
+
+.sublinks a:hover {
+  /* background-color: #f3f9fb; */
+}
+
+.investing:hover .investing-sublinks {
+  display: block;
+}
+
+.navlinks-expand {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ddd;
+  padding: 10px;
+  z-index: 1;
+  width: 100%;
+  top: 70px;
+  left: 0;
+}
+
+.navlinks-expand .sublinks-expand a {
+  color: #112d4e;
+  margin: 10px 0;
+  text-decoration: none;
+}
+
+.navlinks-expand .investing-dropdown a:hover {
+  text-decoration: underline;
+}
+
 nav a {
   color: #112d4e;
   display: block;
